welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:6: error: type mismatch;
 found   : String
 required: Boolean
while (litMessage())
                 ^